--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,6 @@
             <version>6.8.5</version>
         </dependency>
 
-
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>2.47.0</version>
-        </dependency>
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-server</artifactId>
@@ -67,7 +60,27 @@
             <version>2.18.1</version>
             <type>maven-plugin</type>
         </dependency>
-
+             
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>3.4.0</version>
+       </dependency>
+       <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.4.0</version>
+       </dependency>
+       <dependency>
+             <groupId>org.testng</groupId>
+             <artifactId>testng</artifactId>
+             <version>RELEASE</version>
+       </dependency>
 
     </dependencies>
 
@@ -118,23 +131,7 @@
 
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-firefox-driver -->
     <!--<dependencies>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-firefox-driver</artifactId>
-            <version>3.4.0</version>
-        </dependency>
-        https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
-    <!--<dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-chrome-driver</artifactId>
-        <version>3.4.0</version>
-    </dependency>
-     https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-    <!--dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>3.4.0</version>
-    </dependency>
+        
 
     <dependency>
         <groupId>org.testng</groupId>
